[tool.poetry]
name = "playlists-migration-api"
version = "1.0.0"
description = "FASTAPI based app to migrate songs from one music application into another"
authors = ["Swaraj Jalkote <swarajjalkote98@gmail.com>"]
packages = [
    {include = "src/"}
]

[tool.poetry.dependencies]
python = "^3.10.11"
annotated-types = "^0.6.0"
anyio = "^4.2.0"
build = "^1.0.3"
CacheControl = "^0.13.1"
certifi = "^2023.11.17"
charset-normalizer = "^3.3.2"
cleo = "^2.1.0"
click = "^8.1.7"
colorama = "^0.4.6"
crashtest = "^0.4.1"
distlib = "^0.3.8"
dulwich = "^0.21.7"
exceptiongroup = "^1.2.0"
fastapi = "^0.109.0"
fastjsonschema = "^2.19.1"
filelock = "^3.13.1"
h11 = "^0.14.0"
httptools = "^0.6.1"
idna = "^3.6"
importlib-metadata = "^7.0.1"
installer = "^0.7.0"
keyring = "^24.3.0"
more-itertools = "^10.2.0"
msgpack = "^1.0.7"
packaging = "^23.2"
pexpect = "^4.9.0"
pkginfo = "^1.9.6"
platformdirs = "^3.11.0"
poetry = "^1.7.1"
poetry-core = "^1.8.1"
poetry-plugin-export = "^1.6.0"
ptyprocess = "^0.7.0"
pydantic = "^2.5.3"
pydantic_core = "^2.14.6"
pyproject_hooks = "^1.0.0"
python-dotenv = "^1.0.1"
pywin32-ctypes = "^0.2.2"
PyYAML = "^6.0.1"
rapidfuzz = "^3.6.1"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
shellingham = "^1.5.4"
sniffio = "^1.3.0"
starlette = "^0.35.1"
tomli = "^2.0.1"
tomlkit = "^0.12.3"
trove-classifiers = "^2024.1.8"
typing_extensions = "^4.9.0"
urllib3 = "^2.1.0"
uvicorn = "^0.27.0"
virtualenv = "^20.25.0"
watchfiles = "^0.21.0"
websockets = "^12.0"
zipp  = "^3.17.0"
ytmusicapi = "^1.5.2"
